# Whitefoot

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEGEN-PARITY.md  CONSTITUTION.md  HANDOVER.md  LICENSE  Makefile  PATTERNS.md  README.md  ROADMAP.md  THE-PLAN.md  WORKFLOW.md  codegen-parity.json
archive/: DECISION_SPRINT.md  README.md  ROADMAP.md
archive/compiler/frontend-v0.9-2026-07-22/: Cargo.toml  Makefile  README.md  kernel-spec-v0.8.sha256  kernel-spec-v0.9.sha256  static-semantic-catalog-v0.8.sha256
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-contract/src/: binding.rs  source.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-contract/src/binding/: tests.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-language-data/: Cargo.toml
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-language-data/src/: lib.rs  terminal.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-lexer/: Cargo.toml
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-lexer/src/: lib.rs  outcome.rs  scanner.rs  token.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-lexer/src/tests/: hostile.rs  mod.rs  resources.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-source-audit/: Cargo.toml
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-source-audit/src/: lib.rs  source_binding.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/: Cargo.toml
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax-data/: Cargo.toml
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax-data/src/: generated_v0_9.rs  lib.rs  tests.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/src/: classifier.rs  lib.rs  outcome.rs  tests.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/src/parser/: diagnostic.rs  engine.rs  mod.rs  outcome.rs  tests.rs  tree.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/src/parser/finalize/: canonical.rs  engine.rs  mod.rs  outcome.rs  shape.rs  topology.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/src/parser/finalize/canonical/: format.rs
archive/compiler/frontend-v0.9-2026-07-22/crates/whitefoot-syntax/src/parser/finalize/tests/: canonical.rs  support.rs  topology.rs
archive/compiler/frontend-v0.9-2026-07-22/tools/: check_canonical_contract.py  check_syntax_contract.py  check_terminal_contract.py  generate_syntax_contract.py  syntax_contract.py  test_canonical_contract.py  test_syntax_contract.py  test_terminal_contract.py
capabilities/: README.md
codegen-corpus/: README.md  schema.json
compiler/: Cargo.toml  Makefile  PLAN.md  README.md  dependencies.json  sources.txt  test_frontend.py  test_frontend_retained.py  test_llvm_buffer.py  test_llvm_linear.py  test_llvm_scalar.py  test_llvm_scanner.py  test_llvm_supported.py  test_llvm_text.py  test_output.py  test_parser.py  test_parser_control.py  test_parser_expressions.py  test_semantic_all_types.py  test_semantic_body.py  test_semantic_buffer.py  test_semantic_facts.py  test_semantic_function_symbols.py  test_semantic_globals.py  test_semantic_prelude.py  test_semantic_reborrow_chunk_wrapper.py  test_semantic_reborrow_numeric_wrapper.py  test_semantic_reborrow_rw.py  test_semantic_scanner.py  test_semantic_type_members.py  test_semantic_type_resolve.py  test_semantic_unit.py  test_semantic_writer_index.py  test_symbols.py
compiler/crates/whitefoot-frontend/: Cargo.toml
compiler/crates/whitefoot-frontend/src/: lib.rs  outcome.rs  scanner.rs
compiler/crates/whitefoot-frontend/src/tests/: hostile.rs  lexical.rs  mod.rs
compiler/crates/whitefoot-lexical-observer/: Cargo.toml
compiler/crates/whitefoot-lexical-observer/src/: main.rs  projection.rs  tests.rs
compiler/crates/whitefoot-verifier/: Cargo.toml
conformance/: README.md  manifest.jsonl  runner.py  test_runner.py
docs/: constitution.md  patterns.md  roadmap.md  why-whitefoot-OUTLINE.md  why-whitefoot.md  why-xlang-OUTLINE.md  why-xlang.md
experiments/: README.md
experiments/default-floor/utf8parse/harness/: Cargo.toml
governance/: APPROVALS.md  README.md  decision-log.md  guard-baseline.json
grammar-verifier/: FORMAT.md  Makefile  README.md  RUNNER_SOURCES  cases.txt  domains.txt  expectations.txt  installed_policy.py  limits.txt  run.py  runner_common_report.py  runner_common_schema.py  runner_common_wire.py  runner_inputs.py  runner_oracle_report.py  runner_package.py  runner_process.py  runner_report.py  runner_report_wire.py  runner_static_report.py  runner_trace.py
m3/: RESULTS.md  tasks.jsonl
mcts_mem/: whitefoot.md  xlang.md
optimizer-language-research/: README.md  THIRD-PARTY-NOTICES.md
optimizer-language-research/implementation/phase5-resource-profile/layout-witness/: Cargo.toml  README.md  build.rs
optimizer-language-research/implementation/phase5-resource-profile/layout-witness/src/: charges.rs  host.rs  layouts.rs  ledger.rs  lib.rs  main.rs
optimizer-language-research/implementation/phase5-resource-profile/layout-witness/src/ledger/: codec.rs  identity.rs  tests.rs
research/: README.md
spec/: derivation-ledger-v0.2.md  derivation-ledger.md  fr-reconciliation-m0.md  kernel-spec-v0.1.md  kernel-spec-v0.10.md  kernel-spec-v0.14.md  kernel-spec-v0.15.md  kernel-spec-v0.16.md  kernel-spec-v0.2.md  kernel-spec-v0.3.md  kernel-spec-v0.4.md  kernel-spec-v0.6.md  kernel-spec-v0.7.md  kernel-spec-v0.8.md  kernel-spec-v0.md
tools/: capability_overlay.py  catalog_identity.py  codegen_parity.py  facet_catalog.py  facet_discrepancies.py  facet_discrepancy_inputs.py  facet_discrepancy_predicates.py  semantic_catalog.py  semantic_catalog_io.py  spec_ci.py  test_capability_overlay.py  test_catalog_identity.py  test_checked_automation.py  test_facet_catalog.py  test_facet_discrepancies.py  test_semantic_catalog.py  (+12 more)
(+1611 files in other folders)
