[package]
name = "whitefoot-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Independent verifier for Whitefoot checked artifacts"
publish = false

[lib]
doctest = false

[dependencies]
whitefoot-contract = { path = "../whitefoot-contract" }

[lints]
workspace = true
