[package]
name = "whitefoot-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lossless deterministic shape lexer for Whitefoot v0.9"
publish = false

[dependencies]
whitefoot-contract = { path = "../whitefoot-contract" }

[lib]
doctest = false

[lints]
workspace = true
