[package]
name = "whitefoot-source-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Exact Whitefoot source and specification binding audit"
publish = false

[lib]
doctest = false

[dependencies]
whitefoot-contract = { path = "../whitefoot-contract" }

[lints]
workspace = true
