[package]
name = "whitefoot-syntax-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Version-bound Whitefoot grammar and predictive tables"
publish = false

[dependencies]
whitefoot-contract = { path = "../whitefoot-contract" }
whitefoot-language-data = { path = "../whitefoot-language-data" }

[lib]
doctest = false

[lints]
workspace = true
